Add Doctor model and update related components to use Doctor interface

--- a/src/app/sections/info-doctor/info-doctor.component.html
+++ b/src/app/sections/info-doctor/info-doctor.component.html
@@ -3,8 +3,8 @@
     <img src="img/doctores/{{ doctor?.fotoPerfil }}" alt="Doctor Photo" class="w-20 h-20 rounded-full object-cover mr-6">
     <div class="info flex flex-col">
       <h2 class="m-0 text-xl font-semibold">{{ doctor?.nombre }} {{ doctor?.apellidos }}</h2>
-      <p class="my-2 text-sm text-[#666]">12 años de experiencia</p>
-      <span class="specialization">Pediatra</span>
+      <p class="my-2 text-sm text-[#666]">{{ doctor?.experiencia }} años de experiencia</p>
+      <span class="specialization">{{ doctor?.especialidad?.nombre }}</span>
     </div>
   </div>
 
@@ -28,7 +28,7 @@
         </svg>
       </div>
       <div class="price-rigt">
-        <span class="block text-[#333] font-semibold">€25</span>
+        <span class="block text-[#333] font-semibold">{{ doctor?.precioConsulta }}€</span>
         <span class="block text-sm text-[#666]">Desde</span>
       </div>
     </div>
