Add Doctores Recomendados component and integrate into login views

--- a/src/app/vistas/index-after-login/index-after-login.component.html
+++ b/src/app/vistas/index-after-login/index-after-login.component.html
@@ -26,19 +26,9 @@
                 </div>
                 <app-lista-citas></app-lista-citas>
             </div>
-            
+
         </div>
-        <div class="container-bottom mt-4">
-            <div class="container-header flex items-center justify-between mb-4">
-                <h3 class="titulos text-2xl font-semibold mb-4">Doctores Recomendados</h3>
-                <a href="#" class="enlace text-[#3B9AB8]">Ver Todos ></a>
-            </div>
-            <div class="cont-info-doctors flex flex-wrap justify-between">
-                <app-info-doctor class="w-[32%]"></app-info-doctor>
-                <app-info-doctor class="w-[32%]"></app-info-doctor>
-                <app-info-doctor class="w-[32%]"></app-info-doctor>
-            </div>
-        </div>
+        <cont-doctores-recomendados></cont-doctores-recomendados>
     </div>
 
     <app-footer></app-footer>
