--- a/src/app/vistas/index-before-login/index-before-login.component.html
+++ b/src/app/vistas/index-before-login/index-before-login.component.html
@@ -12,12 +12,8 @@
     </div>
 
     <br>
-    <h3 class="titulos text-2xl font-semibold my-6">Doctores Recomendados</h3>
-    <div class="cont-info-doctors flex flex-wrap justify-between">
-      <app-info-doctor [doctor]="doctor1" class="w-[32%]"></app-info-doctor>
-      <app-info-doctor [doctor]="doctor2" class="w-[32%]"></app-info-doctor>
-      <app-info-doctor [doctor]="doctor3" class="w-[32%]"></app-info-doctor>
-    </div>
+    <cont-doctores-recomendados></cont-doctores-recomendados>
+
     <br>
 
     <h3 class="titulos text-2xl font-semibold my-6">Doctores Cercanos a ti</h3>
