--- a/src/app/vistas/patient-booking/patient-booking.component.html
+++ b/src/app/vistas/patient-booking/patient-booking.component.html
@@ -16,7 +16,7 @@
           <div class="w-6 h-6 mr-2 flex items-center justify-center">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><g fill="none" stroke="#7E7E7E" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" color="#7E7E7E"><path d="M20 22v-3c0-2.828 0-4.243-.879-5.121C18.243 13 16.828 13 14 13l-2 2l-2-2c-2.828 0-4.243 0-5.121.879C4 14.757 4 16.172 4 19v3m12-9v5.5"/><path d="M8.5 13v4m0 0a2 2 0 0 1 2 2v1m-2-3a2 2 0 0 0-2 2v1m9-13.5v-1a3.5 3.5 0 1 0-7 0v1a3.5 3.5 0 1 0 7 0m1.25 12.75a.75.75 0 1 1-1.5 0a.75.75 0 0 1 1.5 0"/></g></svg>
           </div>
-          <div class="text-lg text-gray-500 flex items-center">Dr. Steven John</div>
+          <div class="text-lg text-gray-500 flex items-center">Dr. {{ doctor?.nombre }} {{ doctor?.apellidos }}</div>
         </div>
         <div class="flex items-center">
           <div class="w-6 h-6 mr-2 flex items-center justify-center">
@@ -28,7 +28,7 @@
           <div class="w-6 h-6 mr-2 flex items-center justify-center">
             <svg xmlns="http://www.w3.org/2000/svg" width="256" height="256" viewBox="0 0 256 256"><path fill="#7E7E7E" d="M229.12 142.65a22.43 22.43 0 0 0-19.55-3.88l-45.24 10.4A26 26 0 0 0 140 114H89.94a29.78 29.78 0 0 0-21.21 8.79L45.52 146H16a14 14 0 0 0-14 14v40a14 14 0 0 0 14 14h104a6 6 0 0 0 1.46-.18l64-16a7 7 0 0 0 .89-.3L225.17 181l.33-.15a22.6 22.6 0 0 0 3.62-38.18ZM14 200v-40a2 2 0 0 1 2-2h26v44H16a2 2 0 0 1-2-2m206.28-30l-38.2 16.27L119.26 202H54v-47.51l23.21-23.22A17.88 17.88 0 0 1 89.94 126H140a14 14 0 0 1 0 28h-28a6 6 0 0 0 0 12h32a6 6 0 0 0 1.34-.15l67-15.41l.24-.06a10.6 10.6 0 0 1 7.7 19.62M164 94a34.5 34.5 0 0 0 7.28-.78a34 34 0 1 0 25.46-42.43A34 34 0 1 0 164 94m62-10a22 22 0 1 1-22-22a22 22 0 0 1 22 22m-62-46a21.94 21.94 0 0 1 21.51 17.49a34 34 0 0 0-15.38 25.65A22 22 0 1 1 164 38"/></svg>
           </div>
-          <div class="text-lg text-gray-500 flex items-center">Tarifa: 45€</div>
+          <div class="text-lg text-gray-500 flex items-center">Tarifa: {{ doctor?.precioConsulta }}€</div>
         </div>
       </div>
     </div>
