--- a/src/app/sections/calendar/calendar.component.html
+++ b/src/app/sections/calendar/calendar.component.html
@@ -1,4 +1,5 @@
 <div class="container mx-auto p-4 bg-white rounded-lg">
+  <div class="text-[27px] font-semibold mb-8">Selecciona fecha y hora</div>
   <div class="mb-6">
     <div class="flex justify-between items-center mb-4">
       <button (click)="previousMonth()" class="text-gray-600 hover:text-blue-600 transition-colors">
