Creada vista historial

--- a/src/app/sections/info-detallada/info-detallada.component.html
+++ b/src/app/sections/info-detallada/info-detallada.component.html
@@ -1,4 +1,4 @@
-<div class="container border rounded-lg relative p-5 m-6  bg-white">
+<div class="container border rounded-lg relative p-5 my-6  bg-white">
 
     <div class="absolute top-4 right-4">
       <button
