--- a/src/app/sections/info-general/info-general.component.html
+++ b/src/app/sections/info-general/info-general.component.html
@@ -1,4 +1,4 @@
-<div class="container border rounded-lg relative p-4 m-6  bg-white">
+<div class="container border rounded-lg relative p-4 my-6  bg-white">
     <h2 class="text-sm font-semibold text-gray-800 mb-4">General</h2>
   
     <div class="flex items-center justify-between border-t pt-4">
