--- a/src/app/sections/info-perfil/info-perfil.component.html
+++ b/src/app/sections/info-perfil/info-perfil.component.html
@@ -1,4 +1,4 @@
-<div class="flex items-center p-4 m-6 border rounded-lg text-gray-500 bg-white">
+<div class="flex items-center p-4 my-6 border rounded-lg text-gray-500 bg-white">
         <img class="w-16 h-16 rounded-full mr-3" src="img/Doctor_info_1.png" alt="Foto de perfil de Pepe dux">
         <div class="text-sm">
             <div
