--- a/src/app/vistas/vistas-citas/vistas-citas.component.html
+++ b/src/app/vistas/vistas-citas/vistas-citas.component.html
@@ -1,4 +1,4 @@
-<div class="grid grid-cols-[250px_1fr] h-screen">
+<div class="grid grid-cols-[15%_1fr] h-screen">
     <div>
       <app-left-nav></app-left-nav>
     </div>
