--- a/src/app/navs/left-nav/left-nav.component.html
+++ b/src/app/navs/left-nav/left-nav.component.html
@@ -13,7 +13,7 @@
 
                 <span class="mx-4 font-medium">Panel de control</span>
             </a>           -->
-            <a class="flex items-center px-4 py-2 mt-5 text-[#7E7E7E] transition-colors duration-300 transform rounded-md dark:text-gray-400 hover:bg-[#3B9AB8] dark:hover:bg-gray-800 dark:hover:text-gray-200 hover:text-[#FFFFFF]" href="#">
+            <a class="flex items-center px-4 py-2 mt-5 text-[#7E7E7E] transition-colors duration-300 transform rounded-md dark:text-gray-400 hover:bg-[#3B9AB8] dark:hover:bg-gray-800 dark:hover:text-gray-200 hover:text-[#FFFFFF]" href="/index">
                 <svg class="text-[#7E7E7E] w-5 h-5 hover:text-[#FFFFFF]" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                     <path fill="none" stroke="#7E7E7E" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M6.625 2.75a3.875 3.875 0 1 0 0 7.75a3.875 3.875 0 0 0 0-7.75m10.75 0a3.875 3.875 0 1 0 0 7.75a3.875 3.875 0 0 0 0-7.75M6.625 13.5a3.875 3.875 0 1 0 0 7.75a3.875 3.875 0 0 0 0-7.75m10.75 0a3.875 3.875 0 1 0 0 7.75a3.875 3.875 0 0 0 0-7.75"/>
                 </svg>
@@ -28,7 +28,7 @@
                 <span class="mx-4 font-medium">Horario</span>
             </a>
 
-            <a class="flex items-center px-4 py-2 mt-5 text-[#7E7E7E] transition-colors duration-300 transform rounded-md dark:text-gray-400 hover:bg-[#3B9AB8] dark:hover:bg-gray-800 dark:hover:text-gray-200 hover:text-[#FFFFFF]" href="#">
+            <a class="flex items-center px-4 py-2 mt-5 text-[#7E7E7E] transition-colors duration-300 transform rounded-md dark:text-gray-400 hover:bg-[#3B9AB8] dark:hover:bg-gray-800 dark:hover:text-gray-200 hover:text-[#FFFFFF]" href="/perfil" routerLink="/perfil">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><g fill="#7E7E7E" fill-rule="evenodd" clip-rule="evenodd"><path d="M16 9a4 4 0 1 1-8 0a4 4 0 0 1 8 0m-2 0a2 2 0 1 1-4 0a2 2 0 0 1 4 0"/><path d="M12 1C5.925 1 1 5.925 1 12s4.925 11 11 11s11-4.925 11-11S18.075 1 12 1M3 12c0 2.09.713 4.014 1.908 5.542A8.99 8.99 0 0 1 12.065 14a8.98 8.98 0 0 1 7.092 3.458A9 9 0 1 0 3 12m9 9a8.96 8.96 0 0 1-5.672-2.012A6.99 6.99 0 0 1 12.065 16a6.99 6.99 0 0 1 5.689 2.92A8.96 8.96 0 0 1 12 21"/></g></svg>
 
                 <span class="mx-4 font-medium">Perfil</span>
