--- a/src/app/navs/perfil-nav/perfil-nav.component.html
+++ b/src/app/navs/perfil-nav/perfil-nav.component.html
@@ -1,14 +1,14 @@
 <div
-  class="container m-4 relative p-4 m-4  bg-white"
+  class="container relative p-4 my-4  bg-white"
 >
   <nav class="flex space-x-6 border-b border-gray-200 w-full">
-    <a
+    <a href="/perfil" routerLink="/perfil"
       routerLinkActive="text-blue-600 border-b-2 border-blue-600"
       class="pb-2 text-gray-500 hover:text-blue-500 transition duration-300"
     >
       General</a
     >
-    <a
+    <a href="/perfilHistorial" routerLink="/perfilHistorial"
       routerLinkActive="text-blue-600 border-b-2 border-blue-600"
       class="pb-2 text-gray-500 hover:text-blue-500 transition duration-300"
     >
