--- a/src/app/vistas/profile/profile.component.html
+++ b/src/app/vistas/profile/profile.component.html
@@ -2,7 +2,7 @@
     
     <app-left-nav></app-left-nav>
     <app-secundary-nav></app-secundary-nav>
-    <div class="contenido">
+    <div class="contenido mx-[5%]">
         <app-perfil-nav></app-perfil-nav>
         <app-info-perfil></app-info-perfil>
         <app-info-detallada></app-info-detallada>
