--- a/src/app/sections/lista-citas/lista-citas.component.html
+++ b/src/app/sections/lista-citas/lista-citas.component.html
@@ -1,17 +1,17 @@
-<div class="bg-white shadow-lg rounded-lg p-6">
+<!-- <div class="bg-white shadow-lg rounded-lg p-6">
   <div class="flex items-center justify-between mb-2">
     <span class="text-lg font-semibold w-full p-3 mb-4 rounded-md bg-[#EEEEEE]">Febrero 2025</span>
-  </div>
-  <!-- ---------------------------------------------------------------------------------------- -->
- <div *ngFor="let cita of citasMostradas" class="p-2 rounded-md flex items-center justify-between group hover:bg-[#F6F6F6] border border-[#E9E9E9]">
-    <!-- Bloque con número y letra (V 14), número estático -->
-    <div class="fecha bg-[#EEF5DF] px-6 py-2 rounded-md border-r border-[#E9E9E9] group-hover:bg-[#FFFFFF] flex flex-col items-center">
+  </div> -->
+<!-- ---------------------------------------------------------------------------------------- -->
+<!-- <div *ngFor="let cita of citasMostradas" class="p-2 rounded-md flex items-center justify-between group hover:bg-[#F6F6F6] border border-[#E9E9E9]"> -->
+<!-- Bloque con número y letra (V 14), número estático -->
+<!-- <div class="fecha bg-[#EEF5DF] px-6 py-2 rounded-md border-r border-[#E9E9E9] group-hover:bg-[#FFFFFF] flex flex-col items-center">
         <p class="font-semibold">V</p>  
         <p class="text-[20px] mt-1">14</p>  
-    </div>
-    
-    <!-- Bloque con la información de la cita, cerca del número -->
-    <div class="flex flex-col ml-2">
+    </div> -->
+
+<!-- Bloque con la información de la cita, cerca del número -->
+<!-- <div class="flex flex-col ml-2">
 
       <div *ngIf="isCitasPage" class="flex items-center gap-2">
           <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" viewBox="0 0 24 24">
@@ -45,39 +45,37 @@
           <p class="text-gray-600 text-lg ml-4">&gt;</p>
       </div>
   
-  </div>
+  </div> -->
 
-    <!-- Bloque de Motivo -->
-    <div *ngIf="isCitasPage" class="ml-4 flex flex-col items-center justify-center">
+<!-- Bloque de Motivo -->
+<!-- <div *ngIf="isCitasPage" class="ml-4 flex flex-col items-center justify-center">
       <p class="font-semibold text-gray-800">Motivo: {{ cita.motivo }}</p>
       <a href="#" class="text-sm text-[#3b9ab8] focus:text-blue-500 underline">Ver Documento</a>
-  </div>
-    
-    <!-- Flecha al final -->
-    <button *ngIf="isCitasPage" class="flex group-hover:bg-[#ffffff] bg-[#f8f8f8] p-2 items-center justify-center">
+  </div> -->
+
+<!-- Flecha al final -->
+<!-- <button *ngIf="isCitasPage" class="flex group-hover:bg-[#ffffff] bg-[#f8f8f8] p-2 items-center justify-center">
       <p>Editar</p>
       <svg class="w-4 h-4 ml-2" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
           <path stroke-linecap="round" stroke-linejoin="round" d="M9 5l7 7-7 7" />
       </svg>
   </button>
+</div> -->
+
+
+
+
+
+
+
+
+<!-- -------------------------------------------------------------------------------- -->
+
+
+<!-- </div>  -->
+<div class="bg-white shadow-lg rounded-lg p-6">
+    <div class="flex items-center justify-between mb-2">
+        <span class="text-lg font-semibold w-full p-3 mb-4 rounded-md bg-[#EEEEEE]">Febrero 2025</span>
+    </div>
+    <app-cita></app-cita>
 </div>
-
-
-
-
-
-  
-  
-  
-  <!-- -------------------------------------------------------------------------------- -->
-  
-  
-</div> 
-
-
-<!-- for de máximo 4 fechas más cercanas -->
-    <!-- <app-cita></app-cita> -->
-    <!-- <app-cita></app-cita> -->
-    <!-- <app-cita></app-cita> -->
-    <!-- <app-cita></app-cita> -->
-    <!-- <app-cita></app-cita> -->
