Creada vista editar-perfil

--- a/src/app/sections/info-detallada/info-detallada.component.html
+++ b/src/app/sections/info-detallada/info-detallada.component.html
@@ -1,7 +1,7 @@
 <div class="container border rounded-lg relative p-5 my-6  bg-white">
 
     <div class="absolute top-4 right-4">
-      <button
+      <a href="/editarPerfil"
         class="flex items-center px-4 py-1 text-sm font-medium text-gray-600 border border-gray-300 rounded-md hover:bg-gray-100 hover:text-gray-800 transition duration-300"
       >
         Editar
@@ -9,7 +9,7 @@
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
             d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L7.5 21H3v-4.5L16.732 3.732z" />
         </svg>
-      </button>
+      </a>
     </div>
   
     <div class="grid gap-8 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-3 mt-6">
