--- a/src/app/sections/lista-citas/cita/cita.component.html
+++ b/src/app/sections/lista-citas/cita/cita.component.html
@@ -7,7 +7,8 @@
     </div>
     <div *ngIf="!isCitasPage" class="flex flex-auto justify-between">
         <div>
-            <p class="font-semibold text-gray-800">{{ cita.hora }}</p>
+            <!-- {{ cita.hora }} -->
+            <p class="font-semibold text-gray-800">{{ cita.hora }} </p>
             <p class="text-sm text-gray-600">{{ cita.doctor }}</p>
         </div>
         <button>
@@ -28,7 +29,7 @@
                         <path d="M11 8v5h5"/>
                     </g>
                 </svg>
-                <p class="font-semibold text-gray-800">{{ cita.hora }}</p>
+                <p class="font-semibold text-gray-800">{{ cita.hora }} </p>
             </div>
     
             <div class="flex items-center gap-2">
