--- a/src/app/vistas/edit-profile/edit-profile.component.html
+++ b/src/app/vistas/edit-profile/edit-profile.component.html
@@ -1,69 +1,11 @@
-<!-- <nav class="flex items-center justify-between pt-6 pb-6">
-    <app-title-jakarta />
-    <app-user-nav />
-</nav>
-
-<div class="flex justify-center items-center w-full h-screen bg-gray-100">
-    <div class="flex p-5 w-1/2 bg-white rounded-lg shadow-md">
-        <div class="p-5 text-gray-800 w-1/3  mr-1.5">
-
-            <div onclick="window.location.href='/perfil'"
-                class="inline-block w-10 h-10 mb-7 border border-gray-400 rounded-full flex items-center justify-center text-2xl cursor-pointer transition duration-300 transform hover:bg-[#3B9AB8] hover:text-white hover:scale-110">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                    <g fill="none">
-                        <path
-                            d="M24 0v24H0V0zM12.593 23.258l-.011.002l-.071.035l-.02.004l-.014-.004l-.071-.035q-.016-.005-.024.005l-.004.01l-.017.428l.005.02l.01.013l.104.074l.015.004l.012-.004l.104-.074l.012-.016l.004-.017l-.017-.427q-.004-.016-.017-.018m.265-.113l-.013.002l-.185.093l-.01.01l-.003.011l.018.43l.005.012l.008.007l.201.093q.019.005.029-.008l.004-.014l-.034-.614q-.005-.019-.02-.022m-.715.002a.02.02 0 0 0-.027.006l-.006.014l-.034.614q.001.018.017.024l.015-.002l.201-.093l.01-.008l.004-.011l.017-.43l-.003-.012l-.01-.01z" />
-                        <path fill="#000"
-                            d="M3.636 11.293a1 1 0 0 0 0 1.414l5.657 5.657a1 1 0 0 0 1.414-1.414L6.757 13H20a1 1 0 1 0 0-2H6.757l3.95-3.95a1 1 0 0 0-1.414-1.414z" />
-                    </g>
-                </svg>
-            </div>
-            <div class="container m-6 max-w-96 justify-center">
-                <div class="text-[27px] font-semibold mb-5">Editar Perfil</div>
-                <div class="mb-8">
-                    <label for="nombre" class="block mb-2 text-sm text-gray-600">Nombre</label>
-                    <input type="text" name="nombre" id="nombre" placeholder="Introduzca el nombre"
-                        class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
-                </div>
-                <div class="mb-8">
-                    <label for="apellidos" class="block mb-2 text-sm text-gray-600">Apellidos</label>
-                    <input type="text" name="apellidos" id="apellidos" placeholder="Introduzca los apellidos"
-                        class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
-                </div>
-                <div class="mb-8">
-                    <label for="localidad" class="block mb-2 text-sm text-gray-600">Localidad</label>
-                    <input type="text" name="localidad" id="localidad" placeholder="email@ejemplo.com"
-                        class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
-                </div>
-                <div class="mb-8">
-                    <label for="email" class="block mb-2 text-sm text-gray-600">Email</label>
-                    <input type="email" name="email" id="email" placeholder="email@ejemplo.com"
-                        class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
-                </div>
-
-                <div class="mb-8">
-                    <label for="contacto" class="block mb-2 text-sm text-gray-600">Número de Contacto</label>
-                    <input type="text" name="contacto" id="contacto" placeholder="Introduzca su número de teléfono"
-                        class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
-                </div>
-
-            </div>
-            <div class="flex justify-end mt-2">
-                <button class="bg-[#3B9AB8] text-white px-12 py-3 rounded">Confirmar</button>
-            </div>
-        </div>
-    </div>
-</div> -->
 <nav class="flex items-center justify-between pt-6 pb-6">
     <app-title-jakarta />
     <app-user-nav />
 </nav>
 
 <div class="flex justify-center items-center w-full h-screen bg-gray-100">
-    <!-- Contenedor principal centrado -->
     <div class="flex flex-col p-5 w-1/2 max-w-lg bg-white rounded-lg shadow-md">
 
-        <!-- Icono de edición -->
         <div onclick="window.location.href='/perfil'"
             class="inline-block w-10 h-10 mb-7 border border-gray-400 rounded-full flex items-center justify-center text-2xl cursor-pointer transition duration-300 transform hover:bg-[#F6F6F6] hover:text-white hover:scale-110">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
@@ -76,43 +18,40 @@
             </svg>
         </div>
 
-        <!-- Formulario -->
         <div class="container m-6 max-w-[90%] justify-center">
             <div class="text-[27px] font-semibold mb-5">Editar Perfil</div>
 
-            <!-- Campos de formulario -->
             <div class="mb-8">
                 <label for="nombre" class="block mb-2 text-sm text-gray-600">Nombre</label>
-                <input type="text" name="nombre" id="nombre" placeholder="Introduzca el nombre"
+                <input type="text" value="nombre" name="nombre" id="nombre" placeholder="Introduzca el nombre"
                     class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
             </div>
 
             <div class="mb-8">
                 <label for="apellidos" class="block mb-2 text-sm text-gray-600">Apellidos</label>
-                <input type="text" name="apellidos" id="apellidos" placeholder="Introduzca los apellidos"
+                <input type="text" value="apellidos" name="apellidos" id="apellidos" placeholder="Introduzca los apellidos"
                     class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
             </div>
 
             <div class="mb-8">
                 <label for="localidad" class="block mb-2 text-sm text-gray-600">Localidad</label>
-                <input type="text" name="localidad" id="localidad" placeholder="email@ejemplo.com"
+                <input type="text" value="localidad" name="localidad" id="localidad" placeholder="email@ejemplo.com"
                     class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
             </div>
 
             <div class="mb-8">
                 <label for="email" class="block mb-2 text-sm text-gray-600">Email</label>
-                <input type="email" name="email" id="email" placeholder="email@ejemplo.com"
+                <input type="email" value="email" name="email" id="email" placeholder="email@ejemplo.com"
                     class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
             </div>
-
+<!-- ESTE NO HE METIDO VALUE PORQUE NO ESTA EN BBDD COMO EL SEXO -->
             <div class="mb-8">
                 <label for="contacto" class="block mb-2 text-sm text-gray-600">Número de Contacto</label>
-                <input type="text" name="contacto" id="contacto" placeholder="Introduzca su número de teléfono"
+                <input type="text" value="nombre" name="contacto" id="contacto" placeholder="Introduzca su número de teléfono"
                     class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
             </div>
         </div>
 
-        <!-- Botón de Confirmar -->
         <div class="flex justify-end mt-2">
             <button class="bg-[#3B9AB8] text-white px-12 py-3 rounded">Confirmar</button>
         </div>
