--- a/src/app/login/registro/registro.component.html
+++ b/src/app/login/registro/registro.component.html
@@ -52,6 +52,12 @@
             </div>
 
             <div>
+              <label for="telefono" class="block mb-2 text-sm text-gray-600 dark:text-gray-200">Teléfono</label>
+              <input type="text" name="telefono" id="telefono" placeholder="Telefono de contacto" [(ngModel)]="usuario.telefono" required
+                class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
+            </div>
+
+            <div>
               <label for="provincia" class="block mb-2 text-sm text-gray-600 dark:text-gray-200">Provincia</label>
               <input type="text" name="provincia" id="provincia" placeholder="Tu provincia" [(ngModel)]="usuario.provincia" required
                 class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
