--- a/src/app/sections/lista-citas/cita/cita.component.html
+++ b/src/app/sections/lista-citas/cita/cita.component.html
@@ -1,38 +1,40 @@
-<div *ngFor="let cita of citasMostradas"
-    class="p-2 rounded-md flex justify-between items-center group hover:bg-[#F6F6F6] border border-[#E9E9E9] ">
+<div
+    class="p-2 rounded-md w-[100%] flex justify-between items-center group hover:bg-[#F6F6F6] border border-[#E9E9E9] ">
     <div
         class="fecha flex-none bg-[#EEF5DF] px-6 py-2 mr-10 rounded-md border-r border-[#E9E9E9] group-hover:bg-[#FFFFFF] flex-none items-center">
         <p class="font-semibold">V</p>
+        <!-- {{ cita.fecha | date: 'dd' }} -->
         <p class="text-[20px] mt-1">14</p>
     </div>
     <div *ngIf="!isCitasPage" class="flex flex-auto justify-between">
         <div>
-            <!-- {{ cita.hora }} -->
-            <p class="font-semibold text-gray-800">{{ cita.hora }} </p>
-            <p class="text-sm text-gray-600">{{ cita.doctor }}</p>
+            <!-- {{ cita.fecha | date: 'shortTime' }} -->
+            <p class="font-semibold text-gray-800">hora</p>
+            <p class="text-sm text-gray-600">Dr. {{ cita.doctor.nombre }} {{ cita.doctor.apellidos }}</p>
         </div>
         <button>
-            <svg class="w-5 h-5" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 24 24"
-                stroke-width="2">
+            <svg class="w-5 h-5" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor"
+                viewBox="0 0 24 24" stroke-width="2">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M9 5l7 7-7 7" />
             </svg>
         </button>
     </div>
 
-    
-    <div *ngIf="isCitasPage"class="flex flex-auto items-center justify-between">
+
+    <div *ngIf="isCitasPage" class="flex flex-auto items-center justify-between">
         <div>
-            <div  class="flex items-center gap-2">
+            <div class="flex items-center gap-2">
                 <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" viewBox="0 0 24 24">
-                    <g fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1">
-                        <circle cx="12" cy="12" r="9"/>
-                        <path d="M11 8v5h5"/>
+                    <g fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                        stroke-width="1">
+                        <circle cx="12" cy="12" r="9" />
+                        <path d="M11 8v5h5" />
                     </g>
                 </svg>
-                <p class="font-semibold text-gray-800">{{ cita.hora }} </p>
+                <p class="font-semibold text-gray-800">hora </p>
             </div>
-    
-            <div class="flex items-center gap-2">
+
+            <div class="flex items-center gap-2 w-[200px]">
                 <div class="flex items-center  w-6 h-6">
                     <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" viewBox="0 0 16 16">
                         <path fill="currentColor" d="M11 7c0 1.66-1.34 3-3 3S5 8.66 5 7s1.34-3 3-3s3 1.34 3 3" />
@@ -41,21 +43,14 @@
                             clip-rule="evenodd" />
                     </svg>
                 </div>
-                <p class="text-sm text-gray-600">{{ cita.doctor }}</p>
+                <p class="text-sm text-gray-600">Dr. {{ cita.doctor.nombre }} {{ cita.doctor.apellidos }}</p>
             </div>
         </div>
 
-        <div class="ml-4 flex flex-col">
+        <div class="ml-4 flex flex-col w-[200px]">
             <p class="font-semibold text-gray-800">Motivo: {{ cita.motivo }}</p>
             <a href="#" class="text-sm text-[#3b9ab8] focus:text-blue-500 underline">Ver Documento</a>
         </div>
-        <button class="flex group-hover:bg-[#ffffff] bg-[#f8f8f8] p-2 items-center ">
-            <p>Editar</p>
-            <svg class="w-4 h-4 ml-2" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor"
-                viewBox="0 0 24 24" stroke-width="2">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M9 5l7 7-7 7" />
-            </svg>
-        </button>
+        <button class="flex text-red-400 hover:text-red-600  p-2 items-center ">Cancelar</button>
     </div>
-
 </div>
