--- a/src/app/sections/lista-citas/lista-citas.component.html
+++ b/src/app/sections/lista-citas/lista-citas.component.html
@@ -1,81 +1,8 @@
-<!-- <div class="bg-white shadow-lg rounded-lg p-6">
-  <div class="flex items-center justify-between mb-2">
-    <span class="text-lg font-semibold w-full p-3 mb-4 rounded-md bg-[#EEEEEE]">Febrero 2025</span>
-  </div> -->
-<!-- ---------------------------------------------------------------------------------------- -->
-<!-- <div *ngFor="let cita of citasMostradas" class="p-2 rounded-md flex items-center justify-between group hover:bg-[#F6F6F6] border border-[#E9E9E9]"> -->
-<!-- Bloque con número y letra (V 14), número estático -->
-<!-- <div class="fecha bg-[#EEF5DF] px-6 py-2 rounded-md border-r border-[#E9E9E9] group-hover:bg-[#FFFFFF] flex flex-col items-center">
-        <p class="font-semibold">V</p>  
-        <p class="text-[20px] mt-1">14</p>  
-    </div> -->
-
-<!-- Bloque con la información de la cita, cerca del número -->
-<!-- <div class="flex flex-col ml-2">
-
-      <div *ngIf="isCitasPage" class="flex items-center gap-2">
-          <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" viewBox="0 0 24 24">
-              <g fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1">
-                  <circle cx="12" cy="12" r="9"/>
-                  <path d="M11 8v5h5"/>
-              </g>
-          </svg>
-          <p class="font-semibold text-gray-800">{{ cita.hora }}</p>
-      </div>
-  
-      <div *ngIf="isCitasPage" class="flex items-center gap-2">
-          <div class="flex items-center justify-center w-6 h-6">
-              <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" viewBox="0 0 16 16">
-                  <path fill="currentColor" d="M11 7c0 1.66-1.34 3-3 3S5 8.66 5 7s1.34-3 3-3s3 1.34 3 3"/>
-                  <path fill="currentColor" fill-rule="evenodd" d="M16 8c0 4.42-3.58 8-8 8s-8-3.58-8-8s3.58-8 8-8s8 3.58 8 8M4 13.75C4.16 13.484 5.71 11 7.99 11c2.27 0 3.83 2.49 3.99 2.75A6.98 6.98 0 0 0 14.99 8c0-3.87-3.13-7-7-7s-7 3.13-7 7c0 2.38 1.19 4.49 3.01 5.75" clip-rule="evenodd"/>
-              </svg>
-          </div>
-          <p class="text-sm text-gray-600">{{ cita.doctor }}</p>
-      </div>
-  
-      <div *ngIf="!isCitasPage" class="flex items-center justify-center">
-          <div class="flex flex-col items-center">
-              <div class="flex items-center gap-2">
-                  <p class="font-semibold text-gray-800">{{ cita.hora }}</p>
-              </div>
-              <div class="flex items-center gap-2">
-                  <p class="text-sm text-gray-600">{{ cita.doctor }}</p>
-              </div>
-          </div>
-          <p class="text-gray-600 text-lg ml-4">&gt;</p>
-      </div>
-  
-  </div> -->
-
-<!-- Bloque de Motivo -->
-<!-- <div *ngIf="isCitasPage" class="ml-4 flex flex-col items-center justify-center">
-      <p class="font-semibold text-gray-800">Motivo: {{ cita.motivo }}</p>
-      <a href="#" class="text-sm text-[#3b9ab8] focus:text-blue-500 underline">Ver Documento</a>
-  </div> -->
-
-<!-- Flecha al final -->
-<!-- <button *ngIf="isCitasPage" class="flex group-hover:bg-[#ffffff] bg-[#f8f8f8] p-2 items-center justify-center">
-      <p>Editar</p>
-      <svg class="w-4 h-4 ml-2" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M9 5l7 7-7 7" />
-      </svg>
-  </button>
-</div> -->
-
-
-
-
-
-
-
-
-<!-- -------------------------------------------------------------------------------- -->
-
-
-<!-- </div>  -->
 <div class="bg-white shadow-lg rounded-lg p-6">
     <div class="flex items-center justify-between mb-2">
         <span class="text-lg font-semibold w-full p-3 mb-4 rounded-md bg-[#EEEEEE]">Febrero 2025</span>
     </div>
-    <app-cita></app-cita>
+    <div *ngFor="let cita of citasMostradas">
+        <app-cita [cita]="cita"></app-cita>
+    </div>
 </div>
