--- a/src/app/vistas/index-after-login/index-after-login.component.html
+++ b/src/app/vistas/index-after-login/index-after-login.component.html
@@ -2,7 +2,6 @@
     <app-left-nav></app-left-nav>
     <app-secundary-nav></app-secundary-nav>
 
-<!-- CAMBIAR -->
     <div class="contenido px-[3%] mb-6">
         <div class="container-top">
             <div class="container-left-section mr-7">
@@ -22,7 +21,7 @@
             <div class="container-right-section">
                 <div class="container-header flex items-center justify-between mb-4">
                     <h3 class="titulos text-2xl font-semibold ">Citas Programadas</h3>
-                    <a href="/citas" routerLink="/citas" class="enlace text-[#3B9AB8]">Ver Todas ></a>
+                    <a href="/misCitasUsuario" routerLink="/misCitasUsuario" class="enlace text-[#3B9AB8]">Ver Todas ></a>
                 </div>
                 <app-lista-citas></app-lista-citas>
             </div>
@@ -33,5 +32,3 @@
 
     <app-footer></app-footer>
 </div>
-
-<!-- TAILWIND -->
