--- a/src/app/vistas/edit-profile/edit-profile.component.html
+++ b/src/app/vistas/edit-profile/edit-profile.component.html
@@ -34,22 +34,29 @@
             </div>
 
             <div class="mb-8">
+                <label for="email" class="block mb-2 text-sm text-gray-600">Email</label>
+                <input type="email" value="email" name="email" id="email" placeholder="email@ejemplo.com"
+                    class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
+            </div>
+
+            <div class="mb-8">
+                <label for="telefono" class="block mb-2 text-sm text-gray-600">Número de Contacto</label>
+                <input type="text" value="telefono" name="telefono" id="telefono" placeholder="Introduzca su número de teléfono"
+                    class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
+            </div>
+
+            <div class="mb-8">
                 <label for="localidad" class="block mb-2 text-sm text-gray-600">Localidad</label>
                 <input type="text" value="localidad" name="localidad" id="localidad" placeholder="email@ejemplo.com"
                     class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
             </div>
 
             <div class="mb-8">
-                <label for="email" class="block mb-2 text-sm text-gray-600">Email</label>
-                <input type="email" value="email" name="email" id="email" placeholder="email@ejemplo.com"
+                <label for="direccion" class="block mb-2 text-sm text-gray-600">Dirección</label>
+                <input type="text" value="direccion" name="direccion" id="direccion" placeholder="Introduzca su número de teléfono"
                     class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
             </div>
-<!-- ESTE NO HE METIDO VALUE PORQUE NO ESTA EN BBDD COMO EL SEXO -->
-            <div class="mb-8">
-                <label for="contacto" class="block mb-2 text-sm text-gray-600">Número de Contacto</label>
-                <input type="text" value="nombre" name="contacto" id="contacto" placeholder="Introduzca su número de teléfono"
-                    class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
-            </div>
+
         </div>
 
         <div class="flex justify-end mt-2">
