Añadiendo lógica para questionar notificaciones vistas y no vistas

--- a/src/app/navs/user-nav/panel-notificaciones/notificacion/notificacion.component.html
+++ b/src/app/navs/user-nav/panel-notificaciones/notificacion/notificacion.component.html
@@ -1,6 +1,6 @@
 <div class="flex items-center p-3 border-b border-gray-200 hover:bg-gray-100">
     <div class="relative">
-      <img src="img/Doctor_group_1.png" alt="Imagen" class="w-12 h-12 rounded-full object-cover">
+      <img src="img/doctores/{{ cita.doctor.fotoPerfil }}" alt="Imagen" class="w-12 h-12 rounded-full object-cover">
       <!-- <div *ngIf="cantidad > 0"
         class="absolute -top-1 -right-1 bg-red-500 text-white text-xs font-bold w-5 h-5 flex items-center justify-center rounded-full">
         15
@@ -8,10 +8,10 @@
     </div>
   
     <div class="ml-3 flex-1">
-      <h4 class="text-sm font-semibold text-gray-900">Dr.</h4>
-      <p class="text-xs text-gray-600">Cita</p>
+      <h4 class="text-sm font-semibold text-gray-900">Dr. {{ cita.doctor.nombre }} {{ cita.doctor.apellidos }}</h4>
+      <p class="text-xs text-gray-600">Nueva Cita</p>
     </div>
   
-    <span class="text-xs text-gray-500">Hora</span>
+    <span class="text-xs text-gray-500">{{ cita.fecha | date:'dd/MM/yyyy HH:mm' }}</span>
   </div>
   
