--- a/src/app/nearby-doctors/nearby-doctors/nearby-doctors.component.html
+++ b/src/app/nearby-doctors/nearby-doctors/nearby-doctors.component.html
@@ -1,24 +1,27 @@
-<div class="card bg-white border border-[#e1e1e1] rounded-lg w-full max-w-[450px] h-[160px]">
-  <div class="card-content flex flex-wrap p-2">
-    <div class="top flex w-full border-b border-[#e1e1e1] pb-1.5">
-      <div class="cont-img w-[85px]">
-        <img src="img/Nearby.png" alt="Office image" class="w-full h-auto rounded-xl">
+<div class="card bg-white border border-[#e1e1e1] rounded-lg w-full max-w-[450px] h-auto">
+  <div class="card-content flex flex-wrap p-4">
+    <div class="top flex w-full border-b border-[#e1e1e1] pb-3 mb-3">
+      <div class="cont-img w-[85px] h-[85px]">
+        <img src="img/doctores/{{ doctor.fotoPerfil }}" alt="Doctor image" class="w-full h-full object-cover rounded-xl">
       </div>
-      <div class="text flex flex-col justify-center ml-3">
-        <h4 class="text-black text-lg font-medium mt-2">Aline Carvalho</h4>
-        <p class="text-[#666] text-sm my-1.5">Neumólogo</p>
+      <div class="text flex flex-col justify-center ml-4">
+        <h4 class="text-black text-lg font-medium">{{ doctor.nombre }} {{ doctor.apellidos }}</h4>
+        <p class="text-[#666] text-sm my-1">{{ doctor.especialidad.nombre }}</p>
       </div>
     </div>
-    <div class="location flex items-center h-[60px] text-[#666] text-sm">
+    <div class="location flex items-center text-[#666] text-sm mb-3">
       <div>
-        <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" class="w-[16px] h-[16px] mr-2 fill-[#666]">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" class="w-[16px] h-[16px] mr-2 fill-[#666]">
           <path d="M12 2c-4.4 0-8 3.6-8 8c0 5.4 7 11.5 7.3 11.8c.2.1.5.2.7.2s.5-.1.7-.2C13 21.5 20 15.4 20 10c0-4.4-3.6-8-8-8m0 17.7c-2.1-2-6-6.3-6-9.7c0-3.3 2.7-6 6-6s6 2.7 6 6s-3.9 7.7-6 9.7M12 6c-2.2 0-4 1.8-4 4s1.8 4 4 4s4-1.8 4-4s-1.8-4-4-4m0 6c-1.1 0-2-.9-2-2s.9-2 2-2s2 .9 2 2s-.9 2-2 2"/>
         </svg>
       </div>
       <div class="text-location flex flex-col justify-center h-full">
-        <span class="kilometros mb-1">1 km</span>
-        <span>Calle de O’Donnell 18, Retiro</span>
+        <span class="kilometros mb-1">{{ doctor.provincia }}, {{ doctor.localidad }}</span>
+        <span>{{ doctor.direccion }}</span>
       </div>
+    </div>
+    <div class="w-full flex justify-end">
+      <button class="bg-[#3b9ab8] text-white px-4 py-2 rounded-lg hover:bg-[#26738b] transition duration-300">Pedir Cita</button>
     </div>
   </div>
 </div>
