--- a/src/app/navs/find-nav/find-nav.component.css
+++ b/src/app/navs/find-nav/find-nav.component.css
@@ -14,6 +14,7 @@
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     min-width: 650px;
     max-width: 820px;
+    height: 55px;
 }
 
 /* Estilos para cada contenedor individual dentro de .find-nav */
@@ -46,10 +47,14 @@
     width: 90px;
     outline: none;
     transition: border-color 0.3s ease, box-shadow 0.3s ease;
+    font-size: 14px;
 }
 
 /* Estilos específicos para el botón de búsqueda */
 .find-nav .search-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background-color: #3B9AB8;
     color: white;
     border: none;
@@ -59,6 +64,8 @@
     font-weight: 400;
     cursor: pointer;
     transition: background-color 0.3s ease, box-shadow 0.3s ease;
+    height: 35px;
+    width: 100px;
 }
 /* Estilos para la barra separadora */
 .find-nav .separator {
